<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut android:shortcutId="upload"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_upload"
        android:shortcutLongLabel="@string/shortcut_upload_long">
        <intent android:action="android.intent.action.VIEW"
            android:targetPackage="io.beebeeb.app"
            android:targetClass="io.beebeeb.app.MainActivity"
            android:data="beebeeb://upload"/>
    </shortcut>
    <shortcut android:shortcutId="search"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent android:action="android.intent.action.VIEW"
            android:targetPackage="io.beebeeb.app"
            android:targetClass="io.beebeeb.app.MainActivity"
            android:data="beebeeb://search"/>
    </shortcut>
    <shortcut android:shortcutId="photos"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_photos"
        android:shortcutLongLabel="@string/shortcut_photos_long">
        <intent android:action="android.intent.action.VIEW"
            android:targetPackage="io.beebeeb.app"
            android:targetClass="io.beebeeb.app.MainActivity"
            android:data="beebeeb://photos"/>
    </shortcut>
</shortcuts>
